logs/debug.log
Watching for file changes with StatReloader
"GET /article/article-list/ HTTP/1.1" 200 15605
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /article/article-list/?page=5&order=None&search=&column=None&tag=None HTTP/1.1" 200 13333
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
D:\software\my_blog\my_blog\settings.py changed, reloading.
ERROR 2024-08-19 14:25:31,410 log 15600 1720 Internal Server Error: /
Traceback (most recent call last):
  File "D:\software\vens\testvir3\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\my_blog\article\views.py", line 72, in article_list
    return render(request, 'article/list.html', context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\loader_tags.py", line 295, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\defaulttags.py", line 861, in do_for
    nodelist_loop = parser.parse(
                    ^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 481, in parse
    raise self.error(token, e)
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 479, in parse
    filter_expression = self.compile_filter(token.contents)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 597, in compile_filter
    return FilterExpression(token, self)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\software\vens\testvir3\Lib\site-packages\django\template\base.py", line 670, in __init__
    raise TemplateSyntaxError(
django.template.exceptions.TemplateSyntaxError: Could not parse some characters: article.| created||timesince_zh
Watching for file changes with StatReloader
"GET /article/article-list/ HTTP/1.1" 200 15560
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
"GET /article/article-list/?page=5&order=None&search=&column=None&tag=None HTTP/1.1" 200 13291
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
"GET /article/article-detail/15/ HTTP/1.1" 200 19725
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /comment/post-comment/15/11 HTTP/1.1" 200 3692
"POST /comment/post-comment/15/11 HTTP/1.1" 200 40
"GET /article/article-detail/15 HTTP/1.1" 301 0
"GET /article/article-detail/15/ HTTP/1.1" 200 22727
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
"GET /userprofile/logout/ HTTP/1.1" 302 0
"GET /article/article-list/ HTTP/1.1" 200 13986
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
"GET /userprofile/login/ HTTP/1.1" 200 5307
"POST /userprofile/login/ HTTP/1.1" 302 0
"GET /article/article-list/ HTTP/1.1" 200 15977
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
"GET /notice/list/ HTTP/1.1" 200 8723
"GET /notice/update/?article_id=15&notice_id=9 HTTP/1.1" 302 0
"GET /article/article-detail/15/ HTTP/1.1" 200 22870
"GET /static/webfonts/fa-solid-900.woff2 HTTP/1.1" 404 1840
"GET /static/webfonts/fa-regular-400.woff2 HTTP/1.1" 404 1846
"GET /static/webfonts/fa-solid-900.ttf HTTP/1.1" 404 1834
"GET /static/webfonts/fa-regular-400.ttf HTTP/1.1" 404 1840
